Added materials with BRDFS. Added some vector transformation and sampling functions.

--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="material.h" />
     <ClInclude Include="maths.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="shape.h" />
