--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -67,10 +67,12 @@
     <ClInclude Include="material.h" />
     <ClInclude Include="maths.h" />
     <ClInclude Include="ray.h" />
+    <ClInclude Include="sampling.h" />
     <ClInclude Include="shape.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="material.cpp" />
     <ClCompile Include="ray.cpp" />
     <ClCompile Include="shape.cpp" />
   </ItemGroup>
